[gd_scene load_steps=2 format=2]

[ext_resource path="res://DebugOverlay.gd" type="Script" id=1]

[node name="PopupPanel" type="PopupPanel"]
visible = true
margin_right = 178.0
margin_bottom = 332.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 174.0
margin_bottom = 328.0

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
margin_right = 170.0
margin_bottom = 14.0
text = "Time"

[node name="TimeSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 170.0
margin_bottom = 34.0

[node name="FreezeTimeCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 170.0
margin_bottom = 62.0
text = "Freeze time"

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 170.0
margin_bottom = 80.0
text = "Time:"

[node name="DateLabel" type="Label" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 170.0
margin_bottom = 98.0
text = "Date:"

[node name="PeriodLabel" type="Label" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 170.0
margin_bottom = 116.0
text = "Period:"

[node name="FpsLabel" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 170.0
margin_bottom = 134.0
text = "FPS:"

